--- a/source/assets/styles/base/typography.scss
+++ b/source/assets/styles/base/typography.scss
@@ -204,7 +204,8 @@ $viewport-max:math.div(840, 16);//740/16;	// about 16x
 	h4{
 		--font-scale:var(--s3);
 	}
-	h5{
+	h5,
+	p[aria-label="summary" i]{
 		--font-scale:var(--s2);
 	}
 	legend,
@@ -284,7 +285,6 @@ $viewport-max:math.div(840, 16);//740/16;	// about 16x
 	small{
 		--line-height:1.2;
 		font-weight:400;
-		font-size:80%;
 		font-size:clamp(9px, var(--zoom) * 2vmin, 12px);
 		letter-spacing:0.5px;
 	}
