--- a/source/assets/styles/sections/intro.scss
+++ b/source/assets/styles/sections/intro.scss
@@ -379,7 +379,7 @@
 		background-size: contain;
 		background-repeat: no-repeat;
 		vertical-align: middle;
-		vertical-align: text-top;
+		vertical-align: text-bottom;
 	}
 
 	.result::before{
